Diplom_2. Bсправила ошибки